# herald-for-cpp

./: .gitignore  AUTHORS.md  CMakeLists.txt  LICENSE.txt  NOTICE.txt  README.md  SECURITY.md  code-coverage.cmake  contributing.md  herald.emProject  herald.emSession  install-deps-ubuntu.sh  make-all-zephyr.bat  make-all-zephyr.sh  nmsize
herald/: CMakeLists.txt  herald.cmake  herald.h
herald-for-c/test/: CMakeLists.txt  test_all.cpp
herald-for-c/test/database/: BleLinkedList_tests.cpp  CMakeLists.txt
herald-mesh-proxy/: CMakeLists.txt
herald-mesh-proxy/src/: main.cpp
herald-programmer/: CMakeLists.txt
herald-programmer/src/: main.cpp
herald-tests/: CMakeLists.txt  advertparser-tests.cpp  allocatablearray-tests.cpp  analysisrunner-tests.cpp  analysissensor-tests.cpp  base64string-tests.cpp  beaconpayload-tests.cpp  blecoordinator-tests.cpp  bledatabase-tests.cpp  bledevice-tests.cpp  blemacaddress-tests.cpp  bytearrayprinter-tests.cpp  catch.hpp  codecoverage-tests.cpp  coordinator-tests.cpp  crossplatform-tests.cpp  data-tests.cpp  datatypes-tests.cpp  datatypesdataderived-tests.cpp  datetime-tests.cpp  distribution-tests.cpp  errorcontactlog-tests.cpp  exposure-manager-tests-new.cpp  exposure-manager-tests.cpp  exposure-risk-tests.cpp  exposure-tests.cpp  extendeddata-tests.cpp  fixedpayload-tests.cpp  gaussian-tests.cpp  memoryarena-tests.cpp  nordicuart-tests.cpp  randomuuid-tests.cpp  ranges-tests.cpp  sample-tests.cpp  sensorlogger-tests.cpp  sha256-tests.cpp  simplepayload-tests.cpp  targetidentifier-tests.cpp  test-templates.cpp  test-templates.h  (+7 more)
herald-tests-zephyr/: CMakeLists.txt  prj.conf
herald-tests-zephyr/src/: dummy-tests.cpp  main.cpp
herald-tests/android/: kMatchingKeySeed.csv
herald-tests/cpp/: contactIdentifier.csv  kMatchingSeed.csv  kMatchingSeed2000.csv
herald-venue-beacon/: CMakeLists.txt  README.md  prj.conf
herald-venue-beacon/src/: main.cpp  my.cpp  my.h
herald-wearable/: CMakeLists.txt  prj.conf
herald-wearable-c/: .gitignore  CMakeLists.txt  Kconfig  prj.conf
herald-wearable-c/src/: abtt_payload.c  abtt_payload.h  herald.c  main.c
herald-wearable/logs/: log-20210220-1307-nrf5340-multi-conn-limited-scan.txt  log-20210220-1338-nrf5340-multi-conn-working.txt  log-20210220-1609-nrf5340-multi-conn-working.txt
herald-wearable/src/: main.cpp
herald/include/: context.h  default_sensor_delegate.h  device.h  herald.h  sensor.h  sensor_array.h  sensor_delegate.h  zephyr_context.h
herald/include/ble/: ble_concrete.h  ble_concrete_nrf.h  ble_concrete_zephyr.h  ble_database.h  ble_database_delegate.h  ble_device.h  ble_device_delegate.h  ble_receiver.h  ble_sensor.h  ble_sensor_configuration.h  ble_transmitter.h  ble_tx_power.h  bluetooth_state_manager.h  bluetooth_state_manager_delegate.h
herald/include/data/: sensor_logger.h
herald/include/datatype/: base64_string.h  bluetooth_state.h  data.h  date.h  encounter.h  error_code.h  immediate_send_data.h  location.h  location_reference.h  payload_data.h  payload_sharing_data.h  payload_timestamp.h  placename_location_reference.h  proximity.h  pseudo_device_address.h  randomness.h  rssi.h  sensor_state.h  sensor_type.h  signal_characteristic_data.h  target_identifier.h  time_interval.h  uuid.h  wgs84.h
herald/include/herald/: context.h  default_sensor_delegate.h  device.h  platform.h  sensor.h  sensor_array.h  sensor_delegate.h  zephyr_context.h
herald/include/herald/analysis/: aggregates.h  analysis.h  distance.h  distance_conversion.h  logging_analysis_delegate.h  ranges.h  risk.h  runner.h  sample_algorithms.h  sampling.h  sensor_source.h
herald/include/herald/ble/: ble.h  ble_concrete.h  ble_concrete_database.h  ble_coordinator.h  ble_database.h  ble_database_delegate.h  ble_device.h  ble_device_delegate.h  ble_mac_address.h  ble_protocols.h  ble_receiver.h  ble_sensor.h  ble_sensor_configuration.h  ble_transmitter.h  ble_tx_power.h  bluetooth_state_manager.h  bluetooth_state_manager_delegate.h
herald/include/herald/data/: contact_log.h  devnull_logging_sink.h  payload_data_formatter.h  sensor_logger.h  stdout_logging_sink.h
herald/include/herald/datatype/: allocatable_array.h  base64_string.h  bluetooth_state.h  data.h  date.h  derived.h  distance.h  distribution.h  encounter.h  error_code.h  exposure.h  exposure_risk.h  immediate_send_data.h  location.h  location_reference.h  luminosity.h  memory_arena.h  model.h  payload_data.h  payload_sharing_data.h  proximity.h  (+17 more)
herald/include/payload/: concrete_payload_data_supplier.h  payload_data_supplier.h
herald/src/: context.cpp  default_sensor_delegate.cpp  platform.cpp  sensor_array.cpp  zephyr_context.cpp
herald/src/ble/: ble.cpp  ble_coordinator.cpp  ble_device.cpp  ble_mac_address.cpp  ble_sensor_configuration.cpp  bluetooth_state_manager.cpp  bluetooth_state_manager_delegate.cpp  concrete_ble_database.cpp  concrete_ble_sensor.cpp
herald/src/data/: concrete_payload_data_formatter.cpp  contact_log.cpp  devnull_logging_sink.cpp  sensor_logger.cpp  stdout_logging_sink.cpp
herald/src/datatype/: base64_string.cpp  data.cpp  date.cpp  distance.cpp  distribution.cpp  encounter.cpp  exposure.cpp  exposure_risk.cpp  immediate_send_data.cpp  location.cpp  luminosity.cpp  payload_data.cpp  pseudo_device_address.cpp  rssi.cpp  rssi_minute.cpp  sensor_type.cpp  signal_characteristic_data.cpp  target_identifier.cpp  time_interval.cpp  uuid.cpp
herald/src/engine/: activities.cpp  coordinator.cpp
herald/src/exposure/: exposure_risk.cpp
heraldns/: CMakeLists.txt  README.md  heraldns.h
heraldns-cli/: CMakeLists.txt  main.cpp
heraldns/include/: heraldns.h
heraldns/include/datatypes/: grid.h  presence.h
heraldns/include/mixing/: direct_mixing.h
heraldns/include/providers/: intermediate_results.h  social_mixing.h  transmission.h
heraldns/include/simulator/: simulator.h
heraldns/include/transmission/: basic_transmission.h
heraldns/src/datatypes/: grid.cpp  presence.cpp
heraldns/src/mixing/: direct_mixing.cpp
heraldns/src/simulator/: simulator.cpp
heraldns/src/transmission/: basic_transmission.cpp
(+132 files in other folders)
